# mcp-sentinel

./: .gitignore  Makefile  README.md  example-config.yaml  go.mod  go.sum  main.go  pyproject.toml  todo.md
docs/: build-testing-environment.md  lab.md  lxd-hot-attach-detach-storage.md  spec-001-introduce.md  spec-002-architecture.md  spec-003-implementation-architecture.md  tools-install.md  use-cases.md
docs/specs/: spec-001-introduce.md  spec-003-implementation-architecture.md
docs/tutorial/: ceph-osd-troubleshooting.md  getting-started.md
mcp-sentinel/: go.mod  go.sum
mcp-sentinel/cmd/: cmd.go
mcp-sentinel/pkg/config/: base.go  config.go
mcp-sentinel/pkg/entity/: entity.go
mcp-sentinel/pkg/mcp/: factory.go
mcp-sentinel/pkg/sentinel/: prompts.go  sentinel.go
mcp-sentinel/pkg/watcher/: factory.go  interface.go  prometheus.go
mcp_sentinel/: __init__.py  __main__.py  cli.py  config.py  interfaces.py  models.py  prompts.py
mcp_sentinel/agent/: __init__.py  orchestrator.py
mcp_sentinel/dispatcher/: __init__.py  prometheus.py
mcp_sentinel/mcp_integration/: __init__.py  registry.py
mcp_sentinel/services/: __init__.py  discovery.py  registry.py
mcp_sentinel/sinks/: __init__.py
mcp_sentinel/watchers/: __init__.py  prometheus.py
mcp_servers/mcp_juju/: Makefile  pyproject.toml
mcp_servers/mcp_juju/mcp_juju/: __init__.py  server.py
tests/: test_agent_orchestrator.py  test_cli.py  test_mcp_server_registry.py  test_prometheus_dispatcher.py
tests/watchers/: test_prometheus_watcher.py
