[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-sentinel"
version = "0.1.0"
description = "Sentinel dispatcher for MCP-based incident management"
authors = [{ name = "MCP Sentinel Team" }]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "openai-agents>=0.1.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-sentinel = "mcp_sentinel.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
