[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-juju"
version = "0.1.0"
description = "MCP server for Juju operations using jubilant"
authors = [{ name = "MCP Sentinel Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "jubilant>=0.1.0",
    "pydantic>=2.6",
    "loguru>=0.7.0",
    "click>=8.1",
]

[project.scripts]
mcp-juju = "mcp_juju.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
